# tileset

./: .gitignore  .pre-commit-config.yaml  Makefile  gen.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  test.py
TileSet/: Corner.py  Side.py  Tile.py  Types.py  Utils.py
