[project]
name = "TilesetGen"
version = "0.0.1"
description = "Tileset Generator"
authors = ["Ben Gosney <bengosney@googlemail.com>"]
python = "^3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py310']

[tool.pycln]
all = true
